<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SSID Logger</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logging">Logging</string>
    <string name="logfile">LogFile</string>
    <string name="please_input_a_valid_file_name">Please input a valid file name</string>
    <string name="duration">Duration</string>
    <string name="size">FileSize</string>
    <string name="freespace">FreeSpace</string>
    <string name="not_logging">start log</string>
    <string name="comment">Comment</string>
    <string name="write_comment_into_log_file_">Write comment into log file...</string>
    <string name="scan_now">Scan Now</string>
    <string name="oneMinutes">1 minutes</string>
    <string name="thirtySeconds">30 seconds</string>
    <string name="active">active</string>
    <string name="passive">passive</string>

</resources>
